--- a/js-01/index.html
+++ b/js-01/index.html
@@ -11,5 +11,6 @@
 
     <script src="./countries.js"></script>
     <script src="./script.js"></script>
+    <script src="/js-02/variables.js"></script>
 </body>
 </html>
