--- a/js-01/index.html
+++ b/js-01/index.html
@@ -12,5 +12,6 @@
     <script src="./countries.js"></script>
     <script src="./script.js"></script>
     <script src="/js-02/variables.js"></script>
+    <script src="/js-03/day3exercises.js"></script>
 </body>
 </html>
