--- a/js-01/index.html
+++ b/js-01/index.html
@@ -13,5 +13,6 @@
     <script src="./script.js"></script>
     <script src="/js-02/variables.js"></script>
     <script src="/js-03/day3exercises.js"></script>
+    <script src="/js-04/conditionals.js"></script>
 </body>
 </html>
