--- a/js-01/index.html
+++ b/js-01/index.html
@@ -14,5 +14,7 @@
     <script src="/js-02/variables.js"></script>
     <script src="/js-03/day3exercises.js"></script>
     <script src="/js-04/conditionals.js"></script>
+    <script src="/js-05/arrays.js"></script>
+    <script src="/js-06/loops.js"></script>
 </body>
 </html>
