day seven started

--- a/js-01/index.html
+++ b/js-01/index.html
@@ -15,7 +15,8 @@
     <script src="/js-03/day3exercises.js"></script>
     <script src="/js-04/conditionals.js"></script>
     <!-- <script src="/js-05/arrays.js"></script> -->
-    <script src="/js-06/loops.js"></script>
+    <!-- <script src="/js-06/loops.js"></script> -->
     <!-- <script src="/quiz-1.js"></script> -->
+     <script src="/js-07/functions.js"></script>
 </body>
 </html>
