--- a/js-01/index.html
+++ b/js-01/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="/js-05/arrays.js"></script> -->
     <!-- <script src="/js-06/loops.js"></script> -->
     <!-- <script src="/quiz-1.js"></script> -->
-     <script src="/js-07/functions.js"></script>
+     <!-- <script src="/js-07/functions.js"></script> -->
+     <script src="/js-08/objects.js"></script>
 </body>
 </html>
